compiler/testData/diagnostics/tests/multiplatform/checkNoActualForExpectInLastModule.ll.kt
// ISSUE: KT-58483
// MODULE: jvm
// FILE: jvm.kt
<!NO_ACTUAL_FOR_EXPECT!>expect class A<!>
